kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: architecture-center-ms
  namespace: architecture-center-dev
  labels:
    app: architecture-center-ms
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: architecture-center-ms
      version: v1
  template:
    metadata:
      labels:
        app: architecture-center-ms
        version: v1
    spec:
      containers:
      - name: architecture-center-ms
        image: ms.io:5000/architecture-center:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
#       livenessProbe:
#         httpGet:
#           path: /actuator/health
#           port: 8989
#         initialDelaySeconds: 3
#       readinessProbe:
#         httpGet:
#           path: /actuator/health
#           port: 8989
#         initialDelaySeconds: 3
#         periodSeconds: 3
        resources:
          requests:
            memory: "256Mi"
            cpu: "1"
          limits:
            memory: "256Mi"
            cpu: "1"
